# wowparser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
parser/: CMakeLists.txt  event.hpp  main.cpp  parameters.hpp  reader.cpp  reader.hpp
